# 3DV-Universal-Semantic-World-Models

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/: bootstrap.py
src/aggregation/: mean_agg.py  slerp_agg.py  variance.py
src/data/: mesh.py  projection.py  replica.py  vggt_loader.py
src/features/: dino_backbone.py  dinotxt_features.py  dinotxt_text.py  model_loaders.py  preprocess.py  sam_masks.py
src/segmentation/: classify.py  metrics.py
src/utils/: cache.py  geometry.py  io.py  progress.py
src/viz/: gt_labels.py  pca_video.py  ply_viewer.py  segmentation_viz.py  variance_heatmap.py
test/: dinotxt_experiments.ipynb  test_aggregated_similarity.py  test_class_similarity_ply.py  test_dinotxt_pca.py  test_dinotxt_similarity.py  test_mean.py  test_projection.py  test_sam_slerp.py  test_subsample.py  test_variance_recompute.py
test/test/: test_sampling.py  test_variance.py  test_vits16_pca.py
